[project]
name = "infotorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "duckduckgo-search>=8.1.1",
    "langgraph>=0.6.7",
    "networkx>=3.5",
    "pre-commit>=4.3.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "streamlit>=1.49.1",
]
