[project]
name = "infotorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "beautifulsoup4>=4.13.5",
    "black>=25.1.0",
    "certifi==2025.8.3",
    "cfgv==3.4.0",
    "click==8.2.1",
    "distlib==0.4.0",
    "dnspython==2.7.0",
    "duckduckgo-search>=8.1.1",
    "email-validator==2.2.0",
    "fastapi==0.116.1",
    "fastapi-cli==0.0.8",
    "fastapi-cloud-cli==0.1.5",
    "filelock==3.18.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "identify==2.6.13",
    "idna==3.10",
    "isort>=6.0.1",
    "jinja2==3.1.6",
    "langchain>=0.3.27",
    "langchain-openapi>=0.1.1",
    "langgraph>=0.6.7",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "mypy==1.17.1",
    "mypy-extensions==1.1.0",
    "networkx>=3.5",
    "nodeenv==1.9.1",
    "pathspec==0.12.1",
    "platformdirs==4.3.8",
    "pre-commit==4.3.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings>=2.10.1",
    "pygments==2.19.2",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "requests>=2.32.5",
    "rich==14.1.0",
    "rich-toolkit==0.15.0",
    "rignore==0.6.4",
    "scalar-fastapi==1.2.3",
    "scikit-learn>=1.7.2",
    "sentry-sdk==2.34.1",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "starlette==0.47.2",
    "streamlit>=1.49.1",
    "typer==0.16.0",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "uv==0.8.8",
    "uvicorn==0.35.0",
    "uvloop==0.21.0",
    "virtualenv==20.33.1",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
]
